[package]
name = "moss_git_hosting_provider"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_git.workspace = true
moss_keyring.workspace = true
anyhow.workspace = true
git2.workspace = true
url.workspace = true
dotenv.workspace = true
serde_json.workspace = true
oauth2 = { workspace = true, features = ["reqwest-blocking"] } # Using blocking for easy testing here
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
webbrowser.workspace = true
keyring.workspace = true

# Making SSH work on Windows
[target.'cfg(windows)'.dependencies]
libssh2-sys = { version = "0.3.1", features = ["openssl-on-win32", "vendored-openssl"] }

[features]
integration-tests = []
