[package]
name = "moss_git_hosting_provider"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sapic-core.workspace = true

moss_app_delegate.workspace = true
moss_applib.workspace = true
moss_git.workspace = true
moss_keyring.workspace = true

joinerror.workspace = true
git2.workspace = true
url.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
oauth2 = { workspace = true, features = ["ureq"] }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { workspace = true, features = ["derive"] }
webbrowser.workspace = true
keyring.workspace = true
async-trait.workspace = true
ts-rs.workspace = true
urlencoding.workspace = true
chrono.workspace = true

# Making SSH work on Windows
[target.'cfg(windows)'.dependencies]
libssh2-sys = { version = "0.3.1", features = ["openssl-on-win32", "vendored-openssl"] }

[features]
test = []
integration-tests = []
