[package]
name = "moss_git"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
git2.workspace = true
dotenv.workspace = true
url.workspace = true

# Making SSH work on Windows
[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10.70", features = ["vendored"] }
ssh2 = { workspace = true, features = ["openssl-on-win32", "vendored-openssl"] }
