[package]
name = "moss_git"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
moss_logging.workspace = true

derive_more = { workspace = true, features = ["deref"] }
git2.workspace = true
url.workspace = true
regex.workspace = true
joinerror.workspace = true
serde = { workspace = true, features = ["derive"] }
ts-rs.workspace = true
tracing.workspace = true

[dev-dependencies]
nanoid.workspace = true

# Making SSH work on Windows
[target.'cfg(windows)'.dependencies]
libssh2-sys = { version = "0.3.1", features = ["openssl-on-win32", "vendored-openssl"] }

[features]
integration-tests = []
