[package]
name = "moss_global_env"
version = "0.1.0"
edition = "2021"

[dependencies]
moss_app.workspace = true
moss_db.workspace = true
moss_fs.workspace = true

anyhow.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
serde_json.workspace = true
ts-rs = { workspace = true, features = ["serde-json-impl"] }

[dev-dependencies]
rand.workspace = true
