[package]
name = "moss_hcl"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hcl-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
joinerror.workspace = true
ts-rs.workspace = true
derive_more = { workspace = true, features = ["deref", "deref_mut"] }

[features]
integration-tests = []
